force-app/main/default/objects/ssot__FundingAwardDisbursement__dlm/fields/ssot__DisbursementDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__DisbursementDateTime__c</fullName>
    <label>Disbursement Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DisbursementDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>