force-app/main/default/objects/ssot__FundingAwardDisbursement__dlm/fields/ssot__DisbursementName__c.field-meta.xml
<CustomField>
    <fullName>ssot__DisbursementName__c</fullName>
    <label>Disbursement Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DisbursementName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>