force-app/main/default/objects/ssot__FundingAwardDisbursement__dlm/fields/ssot__PaymentMethodType__c.field-meta.xml
<CustomField>
    <fullName>ssot__PaymentMethodType__c</fullName>
    <label>Payment Method Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PaymentMethodType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>