force-app/main/default/objects/ssot__FundingAwardDisbursement__dlm/fields/ssot__rel_1716670500190_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716670500190_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FundingAwardDisbursement_FundingAwar_rel</label>
    <referenceTo>ssot__FundingAward__dlm</referenceTo>
    <relationshipLabel>FundingAwardDisbursement_FundingAwar_rel</relationshipLabel>
    <relationshipName>rel_1716670500190_end</relationshipName>
    <type>Lookup</type>
</CustomField>